--- a/src/app/page/add-event/add-event.component.html
+++ b/src/app/page/add-event/add-event.component.html
@@ -110,14 +110,14 @@
 
       <div>
         <mat-form-field class="full-width-details">
-          <textarea matInput placeholder="Description" [(ngModel)]="event.description" rows=8>
+          <textarea matInput placeholder="Email Subject" [(ngModel)]="event.description" rows=8>
         </textarea>
         </mat-form-field>
       </div>
 
       <div>
         <mat-form-field class="full-width-details">
-          <textarea matInput placeholder="Email Content" [(ngModel)]="event.longdescription" rows=8></textarea>
+          <textarea matInput placeholder="Email Content / InstiApp Description" [(ngModel)]="event.longdescription" rows=8></textarea>
         </mat-form-field>
       </div>
 
@@ -223,12 +223,13 @@
   </div>
 
   <div right class="md-preview">
-    <div class="rl-header head">Description Preview</div>
+    <div class="rl-header head">Email Preview</div>
     <div class="subh">
       Styling with <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet"
         target="_blank">Markdown</a> is supported
     </div>
     <markdown class="markdown" [data]="event.description"></markdown>
+    <markdown class="markdown" [data]="event.longdescription"></markdown>
   </div>
 
 </app-desktop-split>
