--- a/src/app/page/event-details/event-details.component.html
+++ b/src/app/page/event-details/event-details.component.html
@@ -14,7 +14,7 @@
     <div class="section">
       <div class="rl-header sm">{{ event.email_subject }}</div>
       <div class="markdown">
-        <div [innerHTML]="dataService.processMDHTML(event.longdescription | markdown)"></div>
+        <div [innerHTML]="dataService.processMDHTML(event.description | markdown)"></div>
       </div>
       <ng-container *ngTemplateOutlet="achievements"></ng-container>
     </div>
@@ -80,13 +80,13 @@
       <ng-container *ngIf="desktopMode || dataService.isMobile()">
         <div class="description markdown">
           <div [innerHTML]="dataService.processMDHTML(event.email_subject | markdown)"></div>
-          <!-- <div [innerHTML]="dataService.processMDHTML(event.long_description | markdown)"></div> -->
+          <div [innerHTML]="dataService.processMDHTML(event.description | markdown)"></div>
         </div>
-        <ng-container *ngIf="dataService.canViewMaxContent()">
+        <ng-container *ngIf="dataService.canViewMaxContent(event)">
           <div class="longdescription markdown">
-            <div [innerHTML]="dataService.processMDHTML(event.longdescription | markdown)"></div>
+            <!-- <div [innerHTML]="dataService.processMDHTML(event.longdescription | markdown)"></div> -->
           </div>
-          <ng-container *ngIf="dataService.canViewMaxContent()">
+          <ng-container *ngIf="dataService.canViewMaxContent(event)">
             <ng-container *ngIf="event.email_rejected; else emailStatus">
               <button mat-raised-button class="rejected-button" disabled>
                 Event Rejected
@@ -140,7 +140,7 @@
     </button>
     <div class="description markdown scrollable-content">
       <div [innerHTML]="dataService.processMDHTML(event.email_subject | markdown)"></div>
-      <div [innerHTML]="dataService.processMDHTML(event.longdescription | markdown)"></div>
+      <div [innerHTML]="dataService.processMDHTML(event.description | markdown)"></div>
     </div>
     <div class="popup-actions">
       <button mat-button color="primary" (click)="approveEmail()">Approve</button>
