--- a/src/app/page/feed/feed.component.css
+++ b/src/app/page/feed/feed.component.css
@@ -45,8 +45,38 @@
 }
 
 .badge {
-    width: 20px; height: 20px;
+    width: 20px; 
+    height: 20px;
     float: right;
+}
+
+.pending-badge{
+    background-color: rgb(249, 51, 51);
+    transform: translateX(-60px);
+    border-radius: 4px;
+    padding: 2px 4px;
+    width: fit-content;
+    color: white;
+}
+
+.menu-box{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: flex-start;
+    
+}
+
+select{
+    font-size: 16px;
+    background-color: #e9e9e9d8;
+    border-radius: 4px;
+    border: none;
+    padding: 4px 6px;
+}
+
+legend{
+    font-size: 18px;
 }
 
 @media (min-width: 961px) and (max-width: 1200px) {
