--- a/src/app/page/feed/feed.component.html
+++ b/src/app/page/feed/feed.component.html
@@ -1,39 +1,37 @@
+<div class="menu-box" style="margin: 24px 40px;">
+    <legend>View Event:</legend>
+    <select (change)="onFilterChange($event.target.value)">
+        <option value="all" [selected]="eventFilter === 'all'">All Events</option>
+        <option value="mine" [selected]="eventFilter === 'mine'">My Events</option>
+        <option value="verify" [selected]="eventFilter === 'verify'">Events to Verify</option>
+    </select>
+</div>
 <app-xunk-spinner *ngIf="!containers || error" [error]="error"></app-xunk-spinner>
 
-<app-event-sidebar-desktop
-    *ngIf="containers && !error"
-    [event]="selectedEvent">
+<app-event-sidebar-desktop *ngIf="containers && !error" [event]="selectedEvent">
 
     <div class="events-list">
         <div *ngFor="let c of containers" class="events-block">
-            <div class="rl-header date-header"
-                *ngIf="c.title !== ''">
+            <div class="rl-header date-header" *ngIf="c.title !== ''">
                 {{ c.title }}
             </div>
-            <mat-card *ngIf="!nobig"
-                       mat-ripple
-                       class="sub-card head-card"
-                      (click)=OpenEvent(c.events[0])>
+            <mat-card *ngIf="!nobig && c.events[0]" mat-ripple class="sub-card head-card"
+                (click)=OpenEvent(c.events[0])>
 
-                <img mat-card-image
-                     class="head-img"
-                    [src]="c.events[0].image_url" alt=""
-                    (click)=OpenEvent(c.events[0])
-                    [src-fallback]="c.events[0].bodies[0].image_url">
+                <img mat-card-image *ngIf="c.events[0].bodies && c.events[0].bodies.length > 0" class="head-img"
+                    [src]="c.events[0].image_url || (c.events[0].bodies[0]?.image_url)" alt=""
+                    (click)=OpenEvent(c.events[0]) [src-fallback]="c.events[0].bodies[0]?.image_url">
 
                 <div> {{ c.events[0].name }} </div>
                 <span class="subhead">{{ dataService.GetEventSubtitle(c.events[0]) }}</span>
 
-                <img *ngIf="c.events[0].offered_achievements.length > 0"
-                      class="badge img-circle object-cover"
-                      src="assets/badge-medal.png" />
+                <img *ngIf="c.events[0].offered_achievements && c.events[0].offered_achievements.length > 0"
+                    class="badge img-circle object-cover" src="assets/badge-medal.png" />
 
             </mat-card>
 
             <app-event-card *ngFor="let event of (nobig ? c.events : c.events.slice(1, c.events.length))"
-                            (click)=OpenEvent(event)
-                            [event]="event"
-                            overrideClick=true>
+                (click)=OpenEvent(event) [event]="event" overrideClick=true>
             </app-event-card>
         </div>
     </div>
@@ -41,11 +39,8 @@
 </app-event-sidebar-desktop>
 
 <div class="float-fixed-right-bottom">
-    <button mat-fab
-            *ngIf="dataService.hasRole()"
-            [class.gone]="dataService.isScrollingDown()"
-            class="add-button mat-elevation-z2"
-            [routerLink]="['/add-event']">
+    <button mat-fab *ngIf="dataService.hasRole()" [class.gone]="dataService.isScrollingDown()"
+        class="add-button mat-elevation-z2" [routerLink]="['/add-event']">
         <mat-icon>add</mat-icon>
     </button>
 </div>
